--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,18 @@
   }
 }
 
+@theme {
+  --animate-spin-reverse: spin-reverse 1s linear infinite;
+}
+@keyframes spin-reverse {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
